[project]
name = "batch-rembg"
version = "0.1.0"
description = "Simple Python wrapper around rembg for batch background removal"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "rembg[cli]>=2.0.0",
    "onnxruntime>=1.15.0",
]

[project.urls]
Homepage = "https://github.com/Liamhbray/batch-rembg"
Issues = "https://github.com/Liamhbray/batch-rembg/issues"

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
